syntax = "proto3";
option go_package = "github.com/aity-cloud/monty/plugins/topology/apis/stream";

import "google/protobuf/empty.proto";
import "github.com/aity-cloud/monty/pkg/apis/core/v1/core.proto";


package stream.topology;

service RemoteTopology {
    rpc Push(Payload) returns (google.protobuf.Empty);
    rpc SyncTopology(Payload) returns (google.protobuf.Empty);
}

message Payload {
    TopologyGraph graph = 1;
}


//FIXME: copied from orchestrator.proto due to duplicate symbol bug
message TopologyGraph {
    core.Reference clusterId = 1;
    bytes data = 2;
    GraphRepr repr = 3;
}

enum GraphRepr {
    None = 0;
    KubectlGraph = 1;
}
